--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
     "antd": "^3.10.0",
+    "leaflet": "^1.5.1",
+    "react-leaflet": "^2.4.0",
+    "react-leaflet-markercluster": "^1.1.8",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
