--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
     "antd": "^3.10.0",
-    "leaflet": "^1.5.1",
-    "react-leaflet": "^2.4.0",
-    "react-leaflet-markercluster": "^1.1.8",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -37,6 +34,8 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "leaflet": "^1.5.1",
+    "leaflet.markercluster": "^1.4.1",
     "mini-css-extract-plugin": "0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
@@ -48,6 +47,8 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.4",
     "react-dom": "^16.5.2",
+    "react-leaflet": "^2.4.0",
+    "react-leaflet-markercluster": "^1.1.8",
     "react-router-dom": "^4.3.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
