--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.11.1",
     "file-loader": "2.0.0",
+    "flowchart.js": "^1.12.1",
     "fs-extra": "7.0.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
@@ -35,6 +36,7 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "leaflet": "^1.5.1",
+    "leaflet-draw": "^1.0.4",
     "leaflet.markercluster": "^1.4.1",
     "mini-css-extract-plugin": "0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -120,6 +122,7 @@
     "babel-plugin-import": "^1.9.1",
     "less": "^2.7.3",
     "less-loader": "^4.1.0",
-    "node-sass": "^4.9.3"
+    "node-sass": "^4.9.3",
+    "ts-loader": "^6.0.4"
   }
 }
