--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "leaflet": "^1.5.1",
+    "leaflet-bing-layer": "^3.3.1",
     "leaflet-draw": "^1.0.4",
+    "leaflet-polylinedecorator": "^1.6.0",
+    "leaflet.chinesetmsproviders": "^1.0.22",
     "leaflet.markercluster": "^1.4.1",
     "mini-css-extract-plugin": "0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
